force-app/main/default/objects/HouseCanary__c/HouseCanary__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>House Canary API</description>
    <label>House Canary</label>
</CustomObject>