force-app/main/default/objects/HouseCanary__c/fields/APISecret__c.field-meta.xml
<CustomField>
    <fullName>APISecret__c</fullName>
    <description>API Secret</description>
    <label>APISecret</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>