force-app/main/default/objects/HouseCanary__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>House Canery End Point URL</description>
    <label>End point</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>